--- a/public_html/search.html
+++ b/public_html/search.html
@@ -16,9 +16,12 @@
             </div>
         </div>
         <form method="post" class="col-sm-10 offset-sm-2 input-group" action="https://www.undcemcs02.und.edu/~benjamin.stafford/Online-Bookstore/public_html/cgi-bin/search.cgi">
-            <input id="search-box" type="text" class="col-sm-7 form-control" placeholder="Search . . ."/>
+            <input id="search-box" name="search-box" type="text" class="col-sm-7 form-control" placeholder="Search . . ."/>
             <button type="button" class="col-sm-2 offset-sm-1 btn btn-outline-primary">Search</button>
             <small id="search-error" class="form-text text-muted" style="color: red;"></small>
+        </form>
+        <form method="post" class="col-sm-10 offset-sm-2 input-group" action="https://www.undcemcs02.und.edu/~benjamin.stafford/Online-Bookstore/public_html/cgi-bin/clear.cgi">
+            <button type="button" class="col-sm-2 offset-sm-1 btn btn-outline-primary">Remove all books</button>
         </form>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script type="text/javascript">
