--- a/public_html/create.html
+++ b/public_html/create.html
@@ -5,26 +5,31 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title id="title"></title>
+        <style>
+            body {
+                background-color: rgb(157, 197, 246);
+            }
+        </style>
     </head>
     <body>
         <div id="header"></div>
         <div class="container">
             <div class="row">
                 <div class="col-sm" style="text-align: center;">
-                    <h2 id="create-title" style="padding:10px;"></h2>
+                    <h2 id="create-title" style="padding:10px; color:white; ">Create a book submission</h2>
                 </div>
             </div>
         </div>
-        <form class="col-sm-9 offset-sm-1" method="post" action="http://undcemcs02.und.edu/~benjamin.stafford/cgi-bin/create.cgi">
-            <div class="form-group">
+        <form class="col-sm-4 offset-sm-4" method="post" action="http://undcemcs02.und.edu/~benjamin.stafford/cgi-bin/create.cgi" style="color:white;">
+            <div class="form-group" >
                 <label>Book Title</label>
                 <input id="book-title" name="book-title" type="text" class="form-control" placeholder="i.e. Web Programming"/>
                 <small id="title-error" class="form-text text-muted" style="color: red;"></small>
             </div>
             <div class="form-group">
-                <label>Author</label>
-                <input id="author" name="author" type="text" class="form-control" placeholder="i.e. Dr. Wen Chen Hu"/>
-                <small id="author-error" class="form-text text-muted" style="color: red;"></small>
+                <label>Price</label>
+                <input id="price" name="author" type="text" class="form-control" placeholder="i.e. 12.99"/>
+                <small id="price-error" class="form-text text-muted" style="color: red;"></small>
             </div>
             <div class="form-group">
                 <label>ISBN</label>
@@ -43,10 +48,6 @@
             $(function(){
                 $("#header").load("header.html");
                 $("#create").addClass("active");
-            });
-            $.getJSON("config.json", function(data){
-                $("#create-title").text(data.create);
-                $("#title").text(data.title);
             });
         </script>
     </body>
