--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,17 +1,21 @@
 <!doctype html>
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" href="../favicon.png"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title id="title"></title>
+        <style>
+            body {
+                background-color: rgb(157, 197, 246);
+            }
+        </style>
     </head>
     <body>
         <div id="header"></div>
         <div class="container">
             <div class="row">
                 <div class="col-sm" style="text-align: center;">
-                    <h2 id="welcome-title" style="padding:10px;"></h2>
+                    <h2 id="welcome-title" style="padding:10px; "></h2>
                 </div>
             </div>
         </div>
@@ -20,10 +24,6 @@
             $(function(){
                 $("#header").load("header.html");
                 $("#home").addClass("active");
-            });
-            $.getJSON("config.json", function(data){
-                $("#welcome-title").text(data.welcome);
-                $("#title").text(data.title);
             });
         </script>
     </body>
