--- a/public_html/create.html
+++ b/public_html/create.html
@@ -6,12 +6,49 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title id="title"></title>
         <style>
-            body {
+            html {
                 background-color: rgb(157, 197, 246);
             }
         </style>
     </head>
     <body>
+        <!-- Nav Bar-->
+            <!-- Bootstrap CSS -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+            <!-- Favicon -->
+            <link rel="icon" href="../favicon.png"/>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="index.html">Bookstore</a>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav col-sm-12">
+                        <li class="nav-item active">
+                            <a id="home" class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="create" class="nav-link" href="create.html">Create</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="modify" class="nav-link" href="modify.html">Modify</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a id="search" class="nav-link dropdown-toggle" href ="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="search.html">Search Subjects</a>
+                                <a class="dropdown-item" href="search.html">Search Books</a>
+                            </div>
+                        </li>
+                        <li class="nav-item ml-auto">
+                            <a id="search" class="nav-link" href="signout.html">Sign Out</a>
+                        </li>
+                    </ul>
+                <div>
+            </nav>
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    
+        <!-- Content-->
         <div id="header"></div>
         <div class="container">
             <div class="row">
@@ -43,12 +80,5 @@
             </div>
             <button id="submit" type="button" class="col-sm-2 offset-sm-5 btn btn-outline-primary">Submit</button>
         </form>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script type="text/javascript">
-            $(function(){
-                $("#header").load("header.html");
-                $("#create").addClass("active");
-            });
-        </script>
     </body>
 </html>
