Need update for PuTTY

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,18 +4,13 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title id="title">Home</title>
-        <style>
-            html {
-                background-color: rgb(157, 197, 246);
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
     <!-- Nav Bar-->
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <!-- Favicon -->
         <link rel="icon" href="../favicon.png"/>
+        <h1 style="text-align:center;color:white;">Welcome to the bookstore!</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="index.html">Bookstore</a>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -32,8 +27,8 @@
                     <li class="nav-item dropdown">
                         <a id="search" class="nav-link dropdown-toggle" href ="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="search.html">Search Subjects</a>
-                            <a class="dropdown-item" href="search.html">Search Books</a>
+                            <a class="dropdown-item" href="searchsubject.html">Search Subjects</a>
+                            <a class="dropdown-item" href="searchbook.html">Search Books</a>
                         </div>
                     </li>
                     <li class="nav-item ml-auto">
