--- a/public_html/signedout.html
+++ b/public_html/signedout.html
@@ -21,7 +21,7 @@
                 <a class="navbar-brand" href="index.html">Bookstore</a>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav col-sm-12">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a id="home" class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
@@ -49,5 +49,6 @@
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     
         <!-- Content-->
+        <h2 style="color: white;">You are now signed out</h2>
     </body>
 </html>
