--- a/public_html/create.html
+++ b/public_html/create.html
@@ -13,6 +13,9 @@
             <!-- Favicon -->
             <link rel="icon" href="../favicon.png"/>
             <h1 style="text-align:center;color:white;">Welcome to the bookstore!</h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+            </button>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="index.html">Bookstore</a>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
