--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,7 @@
         <h1 style="text-align:center;color:white;">Welcome to the bookstore!</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="index.html">Bookstore</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -24,18 +24,12 @@
                     <li class="nav-item">
                         <a id="create" class="nav-link" href="create.html">Create</a>
                     </li>
-                    <li class="nav-item">
-                        <a id="modify" class="nav-link" href="modify.html">Modify</a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a id="search" class="nav-link dropdown-toggle" href ="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="searchsubject.html">Search Subjects</a>
                             <a class="dropdown-item" href="searchbook.html">Search Books</a>
                         </div>
-                    </li>
-                    <li class="nav-item ml-auto">
-                        <a id="search" class="nav-link" href="signout.html">Sign Out</a>
                     </li>
                 </ul>
             <div>
