Change buttons to submit

--- a/public_html/create.html
+++ b/public_html/create.html
@@ -69,7 +69,7 @@
                 <input id="subjects" name="subjects" type="text" class="form-control" placeholder="i.e. Software Development"/>
                 <small id="subjects-error" class="form-text text-muted" style="color: red;"></small>
             </div>
-            <button id="submit" type="button" class="col-sm-2 offset-sm-5 btn btn-outline-primary">Submit</button>
+            <button id="submit" type="submit" class="col-sm-2 offset-sm-5 btn btn-outline-primary">Submit</button>
         </form>
         <script>
             function searchSubmit(){
