--- a/public_html/searchbook.html
+++ b/public_html/searchbook.html
@@ -50,11 +50,11 @@
         <form action="searchSubmit();">
             <small id="search-error" class="form-text text-muted" style="color: red;"></small>
             <input id="search-box" name="search-box" type="text" class="col-sm-7 offset-sm-1 form-control" placeholder="(i.e. ISBN, Title, or Price)"/>
-            <input type="button" class="col-sm-2 btn btn-outline-primary">Search</input>
+            <button type="submit" class="col-sm-2 btn btn-outline-primary">Search</button>
         </form>
         <div id="table"></div>
         <form method="post" action="https://www.undcemcs02.und.edu/~benjamin.stafford/cgi-bin/clear.cgi">
-            <input type="button" class="col-sm-2 btn btn-outline-primary">Remove all books</input>
+            <button type="submit" class="col-sm-2 btn btn-outline-primary">Remove all books</button>
         </form>
 
         <script>
