--- a/public_html/create.html
+++ b/public_html/create.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
         </div>
-        <form class="col-sm-4 offset-sm-4" action="searchSubmit();" style="color:white;">
+        <form class="col-sm-4 offset-sm-4" action="#" onsubmit="searchSubmit();" style="color:white;">
             <div class="form-group" >
                 <label>Book Title</label>
                 <input id="book-title" name="book-title" type="text" class="form-control" placeholder="i.e. Web Programming"/>
