--- a/public_html/searchbook.html
+++ b/public_html/searchbook.html
@@ -62,10 +62,12 @@
                 $.ajax({
                     type: "get",
                     url: "https://www.undcemcs02.und.edu/~benjamin.stafford/cgi-bin/searchbook.cgi",
-                    success: function(){
+                    success: function(data){
+                        alert(data);
                         alert("Success of AJAX");
                     },
-                    error: function(){
+                    error: function(data){
+                        alert(data);
                         alert("Error of AJAX");
                     }
                 });
