--- a/public_html/searchbook.html
+++ b/public_html/searchbook.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <form onsubmit="searchSubmit();">
+        <form method="get" onsubmit="searchSubmit();">
             <small id="search-error" class="form-text text-muted" style="color: red;"></small>
             <input id="search-box" name="search-box" type="text" class="col-sm-7 offset-sm-1 form-control" placeholder="(i.e. ISBN, Title, or Price)"/>
             <button type="submit" class="col-sm-2 btn btn-outline-primary">Search</button>
