Test url change relative dir

--- a/public_html/searchbook.html
+++ b/public_html/searchbook.html
@@ -61,7 +61,7 @@
             function searchSubmit(){
                 $.ajax({
                     type: "post",
-                    url: "https://www.undcemcs02.und.edu/~benjamin.stafford/cgi-bin/searchbook.cgi",
+                    url: "cgi-bin/searchbook.cgi",
                     success: function(){
                         console.log("Success of AJAX");
                     },
