More testing for relative dir

--- a/public_html/create.html
+++ b/public_html/create.html
@@ -84,7 +84,7 @@
                 } else {
                     $.ajax({
                         type: "post",
-                        url: "https://www.undcemcs02.und.edu/~benjamin.stafford/cgi-bin/create.cgi"
+                        url: "cgi-bin/create.cgi"
                     });
                 }
             }
