--- a/public_html/create.html
+++ b/public_html/create.html
@@ -6,39 +6,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title id="title">Create</title>
         <link rel="stylesheet" href="style.css">
-
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     </head>
     <body>
         <!-- Nav Bar-->
-            <h1 style="text-align:center;color:white;">Welcome to the bookstore!</h1>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="index.html">Bookstore</a>
-                <input class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-            </input>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav col-sm-12">
-                        <li class="nav-item">
-                            <a id="home" class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a id="create" class="nav-link" href="create.html">Create</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a id="search" class="nav-link dropdown-toggle" href ="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="searchsubject.html">Search Subjects</a>
-                                <a class="dropdown-item" href="searchbook.html">Search Books</a>
-                            </div>
-                        </li>
-                    </ul>
-                <div>
-            </nav>
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
-    
+        <h1 style="text-align:center;color:white;">Welcome to the bookstore!</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">Bookstore</a>
+            <ul class="navbar-nav col-sm-12">
+                <li class="nav-item">
+                    <a id="home" class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a id="create" class="nav-link" href="create.html">Create</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="search.html">Search Books</a>
+                </li>
+            </ul>
+        </nav>
+        
         <!-- Content-->
         <div id="header"></div>
         <div class="container">
