--- a/public_html/search.html
+++ b/public_html/search.html
@@ -6,37 +6,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title id="title">Search books</title>
         <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-    <!-- Nav Bar-->
-        <h1 style="text-align:center;color:white;">Welcome to the bookstore!</h1>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Bookstore</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav col-sm-12">
-                    <li class="nav-item">
-                        <a id="home" class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="create" class="nav-link" href="create.html">Create</a>
-                    </li>
-                    <li class="nav-item dropdown active">
-                        <a id="search" class="nav-link dropdown-toggle" href ="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="searchsubject.html">Search Subjects</a>
-                            <a class="dropdown-item active" href="searchbook.html">Search Books</a>
-                        </div>
-                    </li>
-                </ul>
-            <div>
-        </nav>
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <!-- Nav Bar-->
+        <h1 style="text-align:center;color:white;">Welcome to the bookstore!</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">Bookstore</a>
+            <ul class="navbar-nav col-sm-12">
+                <li class="nav-item">
+                    <a id="home" class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a id="create" class="nav-link" href="create.html">Create</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="search.html">Search Books</a>
+                </li>
+            </ul>
+        </nav>
     
         <!-- Content-->
         <div id="header"></div>
@@ -48,13 +39,14 @@
             </div>
         </div>
         <form id="form" action="cgi-bin/searchbook.cgi">
+            <div id="subject" class="form-text"></div>
             <small id="search-error" class="form-text text-muted" style="color: red;"></small>
             <input id="search-box" name="search-box" type="text" class="col-sm-7 offset-sm-1 form-control" placeholder="(i.e. ISBN, Title, or Price)"/>
             <button type="submit" class="col-sm-2 btn btn-outline-primary">Search</button>
         </form>
         <div id="table"></div>
-        <form method="post" action="https://www.undcemcs02.und.edu/~benjamin.stafford/cgi-bin/clear.cgi">
-            <button type="submit" class="col-sm-2 btn btn-outline-primary">Remove all books</button>
+        <form method="post" action="cgi-bin/clear.cgi">
+            <button type="submit" class="col-sm-2 btn btn-outline-primary">Clear all</button>
         </form>
 
         <script>
@@ -73,6 +65,20 @@
                     error: function(data){
                         alert(data);
                         alert("Error of AJAX");
+                    }
+                });
+            });
+
+            // Get all subjects on load
+            $(function(){
+                $.ajax({
+                    type: "get",
+                    url: "cgi-bin/subject.cgi",
+                    success: function(data){
+                        $('subject').append(data);
+                    },
+                    error: function(data){
+                        alert(data + "Error in AJAX");
                     }
                 });
             });
