--- a/public_html/search.html
+++ b/public_html/search.html
@@ -59,12 +59,11 @@
                     url: url,
                     data: form.serialize(),
                     success: function(data){
-                        alert(data);
-                        alert("Success of AJAX");
+                        $('html').append(data);
                     },
                     error: function(data){
-                        alert(data);
-                        alert("Error of AJAX");
+                        alert(data +"Error of AJAX");
+                        $('#form').html(data);
                     }
                 });
             });
@@ -75,10 +74,11 @@
                     type: "get",
                     url: "cgi-bin/subject.cgi",
                     success: function(data){
-                        $('subject').append(data);
+                        $('#subject').append(data);
                     },
                     error: function(data){
-                        alert(data + "Error with loading subjects");
+                        alert(JSON.stringify(data) + "Error with loading subjects");
+                        $('#subject').append(data);
                     }
                 });
             });
