change html to append

--- a/public_html/search.html
+++ b/public_html/search.html
@@ -63,7 +63,7 @@
                     },
                     error: function(data){
                         alert(data +"Error of AJAX");
-                        $('#form').html(data);
+                        $('#form').append(data);
                     }
                 });
             });
