subject works as expected

--- a/public_html/search.html
+++ b/public_html/search.html
@@ -65,6 +65,7 @@
                         alert(data +"Error of AJAX");
                     }
                 });
+                console.log(url);
             });
 
             // Get all subjects on load
