--- a/public_html/info.html
+++ b/public_html/info.html
@@ -29,6 +29,6 @@
             </ul>
         </nav>
         <!-- Content-->
-        
+        <button onclick="window.location.href = 'search.html';">Back</button>
     </body>
 </html>
